fIxed problem with modals z-index

--- a/src/components/AppComponent/AppComponent.scss
+++ b/src/components/AppComponent/AppComponent.scss
@@ -26,7 +26,7 @@ body{
 .menu{
     color: white;
     background-color: $quaternary-color;
-    z-index: 9999;
+    z-index: 999;
 
     @media screen and (min-width: $large-device) {
         min-width: 160px;
@@ -37,7 +37,6 @@ body{
         min-width: 58px;
     }
 }
-
 
 .content{
     background: white;
